--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <header class="cabeçalho">
-<img class="cabeçalho-imagem" src="alurastart logo 1.png" alt="logo do alura start">
+<img class="cabeçalho-imagem" src="img/alurastart logo 1 (2).png" alt="logo do alura start">
 <ul class="cabeçalho-lista">
 <li class="cabeçalho-lista-item">Escola</li>
 <li class="cabeçalho-lista-item">Estudante</li>
@@ -24,60 +24,60 @@
 <p class="escola-texto-dois">A turma mais famosa é a Segunda Série B. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
 </div>
 
-<img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro">
+<img class="escola-imagem" src="img/Formula-amico 1 (1).png" alt="Professora no quadro">
 </section>
 <section class="estudante">
 <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
 <div class="estudante-todos">
 <span></span>
 <div class="estudante-div">
-<img class="estudante-imagem" src="Silvana.jpg" alt="foto de Silvana">
-<h3 class="estudante-nome">Prof. Silvana</h3>
-<a href="https://github.com/Silvana14041975"><img class="estudante-icone" src="github.png" alt="icone github"></a>
-<a href="https://linkedin.com/Silvana14041975"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
-<a href="https://instagram.com/Silvana14041975"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
+<img class="estudante-imagem" src="img/cibeli.jpeg" alt="foto de cibeli">
+<h3 class="estudante-nome"> Cibeli Scoparo </h3>
+<a href="https://github.com/Silvana14041975"><img class="estudante-icone" src="img/github 1.png" alt="icone github"></a>
+<a href="https://linkedin.com/Silvana14041975"><img class="estudante-icone" src="img/linkedin 1.png" alt="icone linkedin"></a>
+<a href="https://instagram.com/Silvana14041975"><img class="estudante-icone" src="img/instagram 1.png" alt="icone instagram"></a>
 </div>
 <div class="estudante-div">
-<img class="estudante-imagem" src="Marcelo.jpg" alt="foto do marcelo">
+<img class="estudante-imagem" src="img/Marcelo 1.png" alt="foto do marcelo">
 <h3 class="estudante-nome">Marcelo</h3>
-<img class="estudante-icone" src="github.png" alt="icone github">
-<img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-<img class="estudante-icone" src="instagram.png" alt="icone instagram">
+<img class="estudante-icone" src="img/github 1.png" alt="icone github">
+<img class="estudante-icone" src="img/linkedin 1.png" alt="icone linkedin">
+<img class="estudante-icone" src="img/instagram 1.png" alt="icone instagram">
 </div>
 <div class="estudante-div">
-<img class="estudante-imagem" src="Silvana.jpg" alt="foto de Silvana">
-<h3 class="estudante-nome">Prof. Silvana</h3>
-<img class="estudante-icone" src="github.png" alt="icone github">
-<img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-<img class="estudante-icone" src="instagram.png" alt="icone instagram">
+<img class="estudante-imagem" src="img/cibeli.jpeg" alt="foto de cibeli">
+<h3 class="estudante-nome"> Cibeli Scoparo </h3>
+<img class="estudante-icone" src="img/github 1.png" alt="icone github">
+<img class="estudante-icone" src="img/linkedin 1.png" alt="icone linkedin">
+<img class="estudante-icone" src="img/instagram 1.png" alt="icone instagram">
 </div>
 <span></span>
 <span></span>
 <div class="estudante-div">
 <img class="estudante-imagem" src="Marcelo.jpg" alt="foto do marcelo">
 <h3 class="estudante-nome">Marcelo</h3>
-<img class="estudante-icone" src="github.png" alt="icone github">
-<img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-<img class="estudante-icone" src="instagram.png" alt="icone instagram">
+<img class="estudante-icone" src="img/github 1.png" alt="icone github">
+<img class="estudante-icone" src="img/linkedin 1.png" alt="icone linkedin">
+<img class="estudante-icone" src="img/instagram 1.png" alt="icone instagram">
 </div>
 <div class="estudante-div">
 <img class="estudante-imagem" src="Marcelo.jpg" alt="foto do marcelo">
 <h3 class="estudante-nome">Marcelo</h3>
-<img class="estudante-icone" src="github.png" alt="icone github">
-<img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-<img class="estudante-icone" src="instagram.png" alt="icone instagram">
+<img class="estudante-icone" src="img/github 1.png" alt="icone github">
+<img class="estudante-icone" src="img/linkedin 1.png" alt="icone linkedin">
+<img class="estudante-icone" src="img/instagram 1.png" alt="icone instagram">
 </div>
 <div class="estudante-div">
 <img class="estudante-imagem" src="Marcelo.jpg" alt="foto do marcelo">
 <h3 class="estudante-nome">Marcelo</h3>
-<img class="estudante-icone" src="github.png" alt="icone github">
-<img class="estudante-icone" src="linkedin.png" alt="icone linkedin">
-<img class="estudante-icone" src="instagram.png" alt="icone instagram">
+<img class="estudante-icone" src="img/github 1.png" alt="icone github">
+<img class="estudante-icone" src="img/linkedin 1.png" alt="icone linkedin">
+<img class="estudante-icone" src="img/instagram 1.png" alt="icone instagram">
 </div>
 </div>
 </section>
 <footer class="rodape">
-<img class="rodape-imagem"src="alurastart logo 1.png" alt="logo da alura start">
+<img class="rodape-imagem" src= "" alt="logo da alura start">
 </footer>
 
 </body>
