--- a/index.html
+++ b/index.html
@@ -54,21 +54,21 @@
 <span></span>
 <span></span>
 <div class="estudante-div">
-<img class="estudante-imagem" src="Marcelo.jpg" alt="foto do marcelo">
+<img class="estudante-imagem" src="img/Marcelo 1.png" alt="foto do marcelo">
 <h3 class="estudante-nome">Marcelo</h3>
 <img class="estudante-icone" src="img/github 1.png" alt="icone github">
 <img class="estudante-icone" src="img/linkedin 1.png" alt="icone linkedin">
 <img class="estudante-icone" src="img/instagram 1.png" alt="icone instagram">
 </div>
 <div class="estudante-div">
-<img class="estudante-imagem" src="Marcelo.jpg" alt="foto do marcelo">
+<img class="estudante-imagem" src="img/Marcelo 1.png" alt="foto do marcelo">
 <h3 class="estudante-nome">Marcelo</h3>
 <img class="estudante-icone" src="img/github 1.png" alt="icone github">
 <img class="estudante-icone" src="img/linkedin 1.png" alt="icone linkedin">
 <img class="estudante-icone" src="img/instagram 1.png" alt="icone instagram">
 </div>
 <div class="estudante-div">
-<img class="estudante-imagem" src="Marcelo.jpg" alt="foto do marcelo">
+<img class="estudante-imagem" src="img/Marcelo 1.png" alt="foto do marcelo">
 <h3 class="estudante-nome">Marcelo</h3>
 <img class="estudante-icone" src="img/github 1.png" alt="icone github">
 <img class="estudante-icone" src="img/linkedin 1.png" alt="icone linkedin">
